src2/objects/IoT_Message_Validation_Process__c.object
<CustomObject>
    <description>Verification processes in the IoT Audit log records</description>
    <fields>
        <fullName>End_Datetime__c</fullName>
        <description>End Date and time of the range of record to be processed</description>
        <label>End Datetime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Expected_Consumption_Records__c</fullName>
        <label>Expected Consumption Records</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Expected_Event_Log_records__c</fullName>
        <label>Expected Event Log records</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Expected_Machine_Event_Records__c</fullName>
        <label>Expected Machine Event Records</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Expected_Telemetry_Event_Records__c</fullName>
        <label>Expected Telemetry Event Records</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Finished_at__c</fullName>
        <description>Date and time when the process was finished</description>
        <label>Finished at</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Found_Consumption_Records__c</fullName>
        <label>Found Consumption Records</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Found_Event_Log_Records__c</fullName>
        <label>Found Event Log Records</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Found_Machine_Event_Records__c</fullName>
        <label>Found Machine Event Records</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Found_Telemetry_Event_Records__c</fullName>
        <label>Found Telemetry Event Records</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Initial_Datetime__c</fullName>
        <description>Initial Date and time of the range of record to be processed</description>
        <label>Initial Datetime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Processed_Audit_Records__c</fullName>
        <description>Number of records of IoT Audit Log object processed</description>
        <label>Processed Audit Records</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Started_at__c</fullName>
        <description>Date and time when the process was started</description>
        <label>Started at</label>
        <type>DateTime</type>
    </fields>
    <label>IoT Message Verification Process</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>Initial_Datetime__c</columns>
        <columns>End_Datetime__c</columns>
        <columns>Processed_Audit_Records__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>IoT Message Validation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>IoT Message Verification Processes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>